--- a/css/style.css
+++ b/css/style.css
@@ -26,42 +26,49 @@ img {
 }
 
 img:nth-child(1) {
+    display: block;
     width: 100%;
     left: 0;
     bottom: -10%;
 }
 
 img:nth-child(2) {
+    display: block;
     width: 100%;
     left: 0;
     bottom: -25%;
 }
 
 img:nth-child(3) {
+    display: block;
     width: 100%;
     left: 0;
     bottom: -37%;
 }
 
 img:nth-child(4) {
+    display: block;
     width: 100%;
     left: 0;
     bottom: -35%;
 }
 
 img:nth-child(5) {
+    display: block;
     width: 100%;
     right: 0;
     bottom: -45%;
 }
 
 img:nth-child(6) {
+    display: block;
     width: 100%;
     right: 0;
     bottom: -70%;
 }
 
 img:nth-child(7) {
+    display: block;
     width: 10%;
     left: 200px;
     top: 200px;
@@ -69,18 +76,21 @@ img:nth-child(7) {
 }
 
 img:nth-child(8) {
+    display: block;
     width: 25%;
     left: 0;
     top: 250px;
 }
 
 img:nth-child(9) {
+    display: block;
     width: 40%;
     right: 20px;
     top: 140px;
 }
 
 img:nth-child(10) {
+    display: block;
     width: 40%;
     right: 0;
     top: 250px;
