--- a/css/style.css
+++ b/css/style.css
@@ -70,8 +70,8 @@ img:nth-child(6) {
 img:nth-child(7) {
     display: block;
     width: 15%;
-    left: 40px;
-    top: 40px;
+    left: 6%;
+    top: 10%;
     z-index: -1;
 }
 
@@ -79,26 +79,26 @@ img:nth-child(8) {
     display: block;
     width: 25%;
     left: 0;
-    top: 70px;
+    top: 18%;
 }
 
 img:nth-child(9) {
     display: block;
     width: 40%;
-    right: 20px;
-    top: 40px;
+    right: 3%;
+    top: 11%;
 }
 
 img:nth-child(10) {
     display: block;
     width: 40%;
     right: 0;
-    top: 50px;
+    top: 17%;
 }
 
 img:nth-child(11) {
     display: block;
     width: 5%;
-    left: 50px;
-    bottom: 50px;
+    left: 8%;
+    bottom: 12%;
 }
